Boss Code Cleanup (#5107)
- Cleanup to Azacor, Samwell, EX C'Axtal
- Cleaned up both Axtal files and BossAbilityGroup
- Fixed some typos in dialogue and unjanked dialogue system by writing a short method
- Boss now uses the standard health scaling formula